--- a/YonderTODO.css
+++ b/YonderTODO.css
@@ -26,7 +26,8 @@ h2{
 	line-height: 1.4em;
 	border: 0;
 	outline: none;
-	border: 4px solid rgba(172, 172, 172, 0.93);	
+	border: 4px solid rgba(172, 172, 172, 0.93);
+	border-radius: 15px;	
 }
 
 input::-webkit-input-placeholder{ 
@@ -48,9 +49,15 @@ input:focus {
 #listDiv{
 	color: white;
 	max-width: 405px;
-	border: 1px solid rgb(255, 255, 255);; 
+	border: 1px solid white; 
 	background-color: rgba(46, 125, 197, 0.84);  
-	font-size: 30px;  
+	font-size: 30px; 
+	border-radius: 10px; 
+}
+
+input[type = checkbox]{
+	float:right;	
+	
 }
 
 
