--- a/YonderTODO.css
+++ b/YonderTODO.css
@@ -28,15 +28,19 @@ h2{
 	outline: none;
 	border: 4px solid rgba(172, 172, 172, 0.93);
 	border-radius: 15px;	
+	text-align: center;
+    vertical-align: middle;    
 }
 
 input::-webkit-input-placeholder{ 
 	color: rgba(226, 226, 226, 0.93);
+	font-style: italic;
 
 }
 
 input:focus {
     color: grey;
+
 }
 
 #list{
@@ -44,6 +48,7 @@ input:focus {
 	padding: 0;
 	margin: 0;
 	text-indent: 5px;
+	max-width: 405px;
 }
 
 #listDiv{
@@ -56,9 +61,14 @@ input:focus {
 }
 
 input[type = checkbox]{
-	float:right;	
-	
+	float:left;
+	top: 0;
+    right: 0;
+    bottom: 0;	
 }
+
+
+
 
 
 
